--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 
 body {
-    background-color: rgb(237, 213, 247);
+    background-color: rgb(243, 242, 243);
   }
   
   h1 {
-    color: rgb(22, 255, 216);
+    color: rgb(255, 173, 22);
     text-align: left;
   }
   
   p {
-    font-family: verdana;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
   }
