--- a/style.css
+++ b/style.css
@@ -12,53 +12,31 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
   }
-  <!DOCTYPE html>
-  <html>
-  <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-  body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  </style>
-  </head>
-  <body>
-  
-  <div class="topnav">
-    <a class="active" href="#about">about</a>
-    <a href="#experiments">experiments</a>
-    </div>
-  
-  <div style="padding-left:16px">
-    <h2>Top Navigation Example</h2>
-    <p>Some content.. </p>
-  </div>
-  
-  </body>
-  </html>
-  
+
+  /* Set bg as navy blue */
+.topnav {
+  background-color: rgb(22, 17, 48);
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: rgb(22, 17, 48);
+  color: rgb(255, 173, 22);
+}
