--- a/style.css
+++ b/style.css
@@ -40,3 +40,9 @@ body {
   background-color: rgb(22, 17, 48);
   color: rgb(255, 173, 22);
 }
+
+/* Centre an Image */
+IMG.displayed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto }
