--- a/style.css
+++ b/style.css
@@ -1,28 +1,36 @@
-
-body {
-    background-color: rgb(23, 18, 48);
-  }
-  
-  h1 {
-    color: rgb(255, 173, 22);
-    text-align: left;
-  }
-  
-  p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-  }
-
-  /* Set bg as navy blue */
-.topnav {
-  background-color: rgb(23, 18,48);
-  overflow: hidden;
+body, html {
+  height: 100%;
 }
 
-/* Style the links inside the navigation bar */
+/* The hero image */
+.hero-image {
+
+/* Dark overlay on image */
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(IMAGE/benchaccounting.jpeg"benchaccounting.jpeg");
+
+/* Restrict image height */
+height: 50%;
+
+/* Position and center the image to scale nicely on all screens */
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+}
+
+/* Text overlay on image */
+.hero-text {
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: white;
+}
+/* Style the top links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: rgb(23, 18,48);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -32,12 +40,11 @@ body {
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
+  color: rgb(255, 173, 22);
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: rgb(22, 17, 48);
   color: rgb(255, 173, 22);
 }
 
