--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 .hero-image {
 
 /* Dark overlay on image */
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(IMAGE/benchaccounting.jpeg"benchaccounting.jpeg");
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("benchaccounting.jpeg");
 
 /* Restrict image height */
 height: 50%;
