--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 color: white;
+font-family: 'Raleway', sans-serif;
 }
 
 /* Centre an Image */
