--- a/style.css
+++ b/style.css
@@ -34,3 +34,30 @@ IMG.displayed {
   display: block;
   margin-left: auto;
   margin-right: auto }
+  
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+  }
+
+/* Button Design*/
+.logo button { 
+  border: none; 
+  outline: 0; 
+  display: inline-block; 
+  padding: 10px 25px; 
+  color: black; 
+  background-color: #ddd; 
+  text-align: center; 
+  cursor: pointer
+} 
+.logo button:hover { 
+  background-color: green; 
+  color: white; 
+} 
