--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ body, html {
 
 /* The hero image */
 .hero-image {
-
-/* Dark overlay on image */
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("IMAGE/benchaccounting.jpeg");
+background-image: url("IMAGE/benchaccounting.jpeg");
 
 /* Restrict image height */
 height: 50%;
