--- a/style.css
+++ b/style.css
@@ -37,16 +37,12 @@ IMG.displayed {
 
 /* Button Design*/
 .button { 
-  border: none; 
-  outline: 0; 
-  display: inline-block; 
-  padding: 10px 25px; 
-  color: black; 
-  background-color: #ddd; 
-  text-align: center; 
-  cursor: pointer
-} 
-.button:hover { 
-  background-color: green; 
-  color: white; 
-} 
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
+}
+
+.button:hover {
+  background-color: #555555;
+  color: white;
+}
