--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ IMG.displayed {
   background-color: white;
   color: black;
   border: 2px solid #555555;
+  font-family: 'Raleway', sans-serif;
 }
 
 .button:hover {
