--- a/KIANNE/kiannestyle.css
+++ b/KIANNE/kiannestyle.css
@@ -3,4 +3,8 @@
     position:fixed; top:10; left:20;
     font-size: 24px;
 }
-    
+
+.bodytext{
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+}
