column text experiment

--- a/KIANNE/kiannestyle.css
+++ b/KIANNE/kiannestyle.css
@@ -8,3 +8,15 @@
     font-family: 'Poppins', sans-serif;
     font-size: 12px;
 }
+
+.columntext {
+    -webkit-columns: 2 200px;
+       -moz-columns: 2 200px;
+            columns: 2 200px;
+    -webkit-column-gap: 4em;
+       -moz-column-gap: 4em;
+            column-gap: 4em;
+    -webkit-column-rule: 1px dotted #ddd;
+       -moz-column-rule: 1px dotted #ddd;
+            column-rule: 1px dotted #ddd;
+  }
