--- a/KIANNE/kiannestyle.css
+++ b/KIANNE/kiannestyle.css
@@ -1,3 +1,31 @@
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: rgb(255, 208, 0);
+    color: white;
+  }
+  
+  /* Right-aligned section inside the top navigation */
+  .topnav-right {
+    float: right;
+  }
+
+
 .logotext {
     font-family: 'Poppins', sans-serif;
     position:fixed; top:10; left:20;
