--- a/KIANNE/kiannestyle.css
+++ b/KIANNE/kiannestyle.css
@@ -28,7 +28,7 @@
 
 .logotext {
     font-family: 'Poppins', sans-serif;
-    position:fixed; top:10; left:20;
+    position:absolute; top:10; left:20;
     font-size: 16px;
 }
 
