--- a/KIANNE/kiannestyle.css
+++ b/KIANNE/kiannestyle.css
@@ -48,3 +48,22 @@
        -moz-column-rule: 1px dotted #ddd;
             column-rule: 1px dotted #ddd;
   }
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Create two equal columns that floats next to each other */
+  .column {
+    float: centre;
+    width: 25%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
