--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ IMG.displayed {
 /* Button Design*/
 .button { 
  /* background-color: white; */
-  opacity: 50;
+  opacity: 100;
   color: black;
-  border: 2px solid #555555;
+  border: 2px;
   font-family: 'Raleway', sans-serif;
 }
 
