--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ IMG.displayed {
  /* background-color: white; */
   opacity: 100;
   color: black;
-  border: 2px;
+  border: 2px transparent;
   font-family: 'Raleway', sans-serif;
 }
 
