--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p {
 }
 
 /* The hero image */
-img {
+.hero-image {
 background-image: url("IMAGE/benchaccounting.jpeg");
 
 /* Restrict image height */
