--- a/style.css
+++ b/style.css
@@ -48,11 +48,11 @@ IMG.displayed {
 }
 
 h2 {
-  font-family: ;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
   }
   
 p {
-  font-family: ;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
   }
