--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ IMG.displayed {
   color: black;
   border: 2px solid;
   font-family: 'Raleway', sans-serif;
+  padding: 50px;
 }
 
 .button:hover {
