--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ IMG.displayed {
  /* background-color: white; */
   opacity: 100;
   color: black;
-  border: 2px transparent;
+  border: 2px solid;
   padding: 10px;
   font-family: 'Raleway', sans-serif;
-  font-size: 10px;
+  font-size: 15px;
 }
 
 .button:hover {
