--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ p {
   font-size: 15px;
   }
 
-section: span.a {
-  background-color: bisque;
+section {
+  background-color: gold;
 }
 
 footer {
