--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ p {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 15px;
+  margin-left: 100px;
+  margin-right: 100pt;
   }
 
 section {
