--- a/style.css
+++ b/style.css
@@ -77,6 +77,14 @@ p {
   margin-right: 250pt;
   }
 
+a {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  /*font-size: 15px; */
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
 section {
   background-color: rgb(255, 238, 145);
   margin-left: -10px;
