--- a/style.css
+++ b/style.css
@@ -80,9 +80,9 @@ p {
 a {
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  font-size: 15px; 
-  /* margin-left: 250px;
-  margin-right: 250px; */
+  /*font-size: 15px;*/
+  margin-left: 250px;
+  margin-right: 250px;
 }
 
 section {
