--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ p {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 15px;
-  /*margin-left: 250px;
-  margin-right: 250pt;*/
+  margin-left: 250px;
+  margin-right: 250pt;
   }
 
 a {
