--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ a {
 
 section {
   background-color: rgb(255, 238, 145);
-  /*margin-left: -10px;
-  margin-right: -10px;*/
+  margin-left: -10px;
+  margin-right: -10px;
 }
 
 footer {
