--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@ IMG.displayed {
   color: white;
 }
 
+/* For side by side images */
+
+
 h1 {
   font-family: 'Raleway', sans-serif;
   text-align: center;
