--- a/style.css
+++ b/style.css
@@ -50,7 +50,26 @@ IMG.displayed {
 }
 
 /* For side by side images */
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 50%;
+  /*padding: 5px; */
+}
+.row {
+  display: flex;
+}
+.column {
+  flex: 50%;
+  /*padding: 5px; */
+}
 
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
 h1 {
   font-family: 'Raleway', sans-serif;
