--- a/style.css
+++ b/style.css
@@ -49,20 +49,34 @@ IMG.displayed {
   color: white;
 }
 
-/* For side by side images */
-/* Three image containers (use 25% for four, and 50% for two, etc) */
-.column1 {
-  float: left;
-  width: 50%;
-  /*padding: 5px; */
-}
-.row1 {
-  display: flex;
-}
-.column1 {
-  flex: 50%;
-  /*padding: 5px; */
-}
+/* Side by Side image formatting here. Three image containers (use 25% for four, and 50% for two, etc)*/
+  /* HOME dps */
+    .column1 {
+      float: left;
+      width: 50%;
+      /*padding: 5px; */
+    }
+    .row1 {
+      display: flex;
+    }
+    .column1 {
+      flex: 50%;
+      /*padding: 5px; */
+    }
+
+  /* WEEK2 images */
+    .column2 {
+      float: left;
+      width: 33.33%;
+      /*padding: 5px; */
+    }
+    .row2 {
+      display: flex;
+    }
+    .column2 {
+      flex: 33.33%;
+      /*padding: 5px; */
+    }
 
 /* Clear floats after image containers */
 .row::after {
