--- a/style.css
+++ b/style.css
@@ -105,20 +105,22 @@ h3 { /*This is for the 'we are microbit tinkers' because it's alignment is affec
   text-align: center;
 }
   
-p, ul, li {
+p {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 15px;
-  /*margin-left: 250px;
-  margin-right: 250pt;*/
   }
+
+ul, li {
+  font-family: 'Raleway', sans-serif;
+  text-align: left;
+  font-size: 15px;
+}
 
 a {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 15px;
-  /*margin-left: 250px;
-  margin-right: 250px;*/
 }
 
 footer {
