--- a/style.css
+++ b/style.css
@@ -54,36 +54,36 @@ IMG.displayed {
     .column_aboutus {
       float: left;
       width: 50%;
-      /*padding: 5px; */
+      padding: 5px;
     }
     .row_aboutus {
       display: flex;
     }
     .column_aboutus {
       flex: 50%;
-      /*padding: 5px; */
+      padding: 5px;
     }
 
   /* WEEK2 images */
     .column_w2 {
       float: left;
       width: 33.33%;
-      /*padding: 5px; */
+      padding: 5px;
     }
     .row_w2 {
       display: flex;
     }
     .column_w2 {
       flex: 33.33%;
-      /*padding: 5px; */
+      padding: 5px;
     }
 
-/* Clear floats after image containers .row_aboutus,  */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+    /* Clear floats after image containers .row_aboutus,  */
+    .row::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
 
 h1 {
   font-family: 'Raleway', sans-serif;
