making all headers uppercase in css

--- a/style.css
+++ b/style.css
@@ -109,12 +109,14 @@ h1 {
   text-align: center;
   font-weight: bold;
   font-size: 30px;
+  text-transform: uppercase;
 }
 
 h2 {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 15px;
+  text-transform: uppercase;
   }
 
 h3 { /*This is for the 'we are microbit tinkers' because it's alignment is affected by the margins for <p> */
@@ -122,6 +124,7 @@ h3 { /*This is for the 'we are microbit tinkers' because it's alignment is affec
   font-weight: normal;
   font-size: 14px;
   text-align: center;
+  text-transform: uppercase;
 }
   
 p {
