--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ IMG.displayed {
 .button { 
  /* background-color: white; */
   opacity: 100;
-  color: white;
+  background-color: white;
+  color: black;
   border: 1.5px solid;
   padding: 10px;
   font-family: 'Raleway', sans-serif;
@@ -170,7 +171,7 @@ footer {
 
 
 /* Hyperlink Button Design*/
-a button { 
+a { 
   /* background-color: b; */
   background-color:rgb(3, 3, 39);
    opacity: 100;
