--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, html {
   height: 100%;
   background-color: white;
-  cursor: url(IMAGE/cursoryt.png), auto;
+  cursor: src="IMAGE/cursoryt.png", auto;
 }
 
 /* The hero image */
