--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 
 /* The hero image */
 .hero-image {
-background-image: url("IMAGE/00_hero.jpg.jpeg");
+background-image: url("IMAGE/00_hero.jpg");
 /* Restrict image height */
 height: 80%;
 /* Position and center the image to scale nicely on all screens */
