--- a/style.css
+++ b/style.css
@@ -108,6 +108,12 @@ IMG.displayed {
       display: table;
     }
 
+  /* In a table */
+  th, td {
+  padding: 10px;
+  border: 1px solid #666;
+  }
+
 h1 {
   font-family: 'Raleway', sans-serif;
   text-align: center;
