--- a/style.css
+++ b/style.css
@@ -108,11 +108,12 @@ IMG.displayed {
       display: table;
     }
 
-  /* In a table */
-  th, td {
+/* In a table */
+th, td {
+  font-family: 'Raleway', sans-serif;
   padding: 10px;
   border: 1px solid #666;
-  }
+}
 
 h1 {
   font-family: 'Raleway', sans-serif;
